<resources>
    <string name="app_name">Fullstack Quiz</string>
    <string name="os_textview_string">Operating System</string>
    <string name="networking_textview_string">Networking</string>
    <string name="webdev_textview_string">Web Development</string>
    <string name="question_heading">Question #</string>
    <string name="prev_button">PREV</string>
    <string name="submit_button">SUBMIT</string>
    <string name="next_button">NEXT</string>
    <string name="query_category">Pick Category</string>
    <string name="default_answer">Write your answer here.</string>
    <string name="score_heading">SCORE: </string>
    <string name="quizmaker_constructor_error">QuizMaker Constructor</string>
</resources>
