<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="edu.udacity.faraonc.fullstackquizapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/CategoryStyle"
            android:background="@android:color/black"
            android:text="@string/query_category" />
        <!--TODO add icons-->

        <TextView
            android:id="@+id/os_textview"
            style="@style/CategoryStyle"
            android:background="@drawable/back"
            android:text="@string/os_textview_string" />

        <TextView
            android:id="@+id/networking_textview"
            style="@style/CategoryStyle"
            android:background="@drawable/back"
            android:text="@string/networking_textview_string" />

        <TextView
            android:id="@+id/webdev_textview"
            style="@style/CategoryStyle"
            android:background="@drawable/back"
            android:text="@string/webdev_textview_string" />


    </LinearLayout>


</ScrollView>
